Crypto: add options checkboxes

--- a/styles/crypto-style.css
+++ b/styles/crypto-style.css
@@ -1,3 +1,8 @@
+:root {
+  --form-control-active-color: #2ab2af;
+  --form-control-border-color: #494949;
+}
+
 input[type="text"],
 select,
 textarea {
@@ -26,4 +31,74 @@ textarea {
 .error-container {
   background-color: red;
   display: none;
+}
+
+.checkbox-container {
+  margin: 1rem 0;
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-container span {
+  margin-left: 1rem;
+}
+
+.check-input {
+  display: none;
+}
+
+.checkbox {
+  width: 12px;
+  height: 12px;
+  border: 2px solid var(--form-control-border-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 3px;
+  transition: 0.3s all;
+  margin-left: 2px;
+}
+
+.checkbox svg {
+  width: 20px;
+  height: 20px;
+}
+
+.check-input:checked + .checkbox {
+  background: var(--form-control-active-color);
+  border: 2px solid var(--form-control-active-color);
+}
+
+.check-input:checked + .checkbox svg path {
+  stroke-dasharray: 500;
+  stroke-dashoffset: 500;
+  stroke: #ff0000;
+  stroke-width: 3;
+  animation: check 2.5s forwards;
+}
+
+.checkbox::before {
+  content: "";
+  background: var(--form-control-active-color);
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  display: block;
+}
+
+.check-input:checked + .checkbox::before {
+  animation: ripple 0.3s;
+}
+
+@keyframes check {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes ripple {
+  to {
+    transform: scale(1);
+  }
 }
