Crypto: display error mesage on bad request

--- a/styles/crypto-style.css
+++ b/styles/crypto-style.css
@@ -24,6 +24,10 @@ textarea {
   font-family: "Sublem", Helvetica, sans-serif;
 }
 
+.crypto-data-container {
+  display: none;
+}
+
 .user-text-input {
   display: none;
 }
