--- a/styles/shared.css
+++ b/styles/shared.css
@@ -63,3 +63,15 @@ h2 {
   margin: auto;
   padding: 20px;
 }
+
+@media (max-width: 768px) {
+  .form-container {
+    width: 50%;
+  }
+}
+
+@media (max-width: 480px) {
+  .form-container {
+    width: 75%;
+  }
+}
