--- a/styles/crypto-style.css
+++ b/styles/crypto-style.css
@@ -21,6 +21,8 @@ textarea {
   margin: auto;
   margin-top: 50px;
   text-align: center;
+  width: 50%;
+  background-color: rgb(4, 255, 0);
 }
 
 .user-text-input {
