--- a/styles/shared.css
+++ b/styles/shared.css
@@ -19,6 +19,22 @@ body {
   background-color: var(--primary-color);
 }
 
+button {
+  background-color: #2ab2af;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  margin: auto;
+  margin-top: 30px;
+  display: block;
+}
+
+button:hover {
+  background-color: #337177;
+}
+
 .topnav {
   font-family: "Sublem", Helvetica, sans-serif;
   overflow: hidden;
@@ -50,6 +66,8 @@ body {
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   background-color: red;
+  align-items: center;
+  justify-content: center;
 }
 
 .title-container {
