--- a/styles/shared.css
+++ b/styles/shared.css
@@ -65,12 +65,12 @@ button:hover {
   width: 75%;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: red;
   align-items: center;
   justify-content: center;
 }
 
-.title-container {
+.content-container h1 {
+  font-size: 2rem;
   text-align: center;
   width: 100%;
   font-family: "Sublem", Helvetica, sans-serif;
@@ -98,9 +98,9 @@ button:hover {
 
 .loader::after {
   content: "";
-  width: 75px;
-  height: 75px;
-  border: 15px solid #dddddd;
+  width: 35px;
+  height: 35px;
+  border: 5px solid #dddddd;
   border-top-color: #009578;
   border-radius: 50%;
   animation: loading 0.75s ease infinite;
@@ -115,13 +115,13 @@ button:hover {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1020px) {
   .form-container {
     width: 50%;
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 560px) {
   .form-container {
     width: 75%;
   }
